--- a/Assignment5/authprojtest.git/package.json
+++ b/Assignment5/authprojtest.git/package.json
@@ -4,21 +4,21 @@
   "description": "testing work in progress",
   "main": "server.js",
   "dependencies": {
-    "ejs" : "~0.8.5",
-    "mongoose" : "~3.8.1",
-    "passport" : "~0.1.17",
-    "passport-local" : "~0.1.6",
-    "passport-facebook" : "~1.0.2",
-    "passport-twitter" : "~1.0.2",
-    "passport-google-oauth" : "~0.1.5",
-    "connect-flash" : "~0.1.1",
-    "bcrypt-nodejs" : "latest",
-    "morgan": "~1.0.0",
+    "bcrypt-nodejs": "latest",
     "body-parser": "~1.0.0",
+    "connect-flash": "~0.1.1",
     "cookie-parser": "~1.0.0",
+    "ejs": "~0.8.5",
+    "express": "^4.13.3",
+    "express-session": "^1.12.1",
     "method-override": "~1.0.0",
-    "express": "^4.12.4",
-    "express-session": "^1.11.3"
+    "mongoose": "^3.8.36",
+    "morgan": "~1.0.0",
+    "passport": "~0.1.17",
+    "passport-facebook": "~1.0.2",
+    "passport-google-oauth": "~0.1.5",
+    "passport-local": "~0.1.6",
+    "passport-twitter": "~1.0.2"
   },
   "devDependencies": {},
   "scripts": {
