--- a/Assignment5/authprojtest.git/package.json
+++ b/Assignment5/authprojtest.git/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.0.0",
     "ejs": "~0.8.5",
     "express": "^4.13.3",
+    "express-handlebars": "^2.0.1",
     "express-session": "^1.12.1",
     "method-override": "~1.0.0",
     "mongoose": "^3.8.36",
